# GDInfo

./: AccountModule.py  GDInfo-v1.99.py  GDInfo-v2.0.py  GDInfo-v2.01.py  GDInfo.py  LevelModule.py  README.md  pyproject.toml  setup.cfg
modules/: Account.py  AccountIconDL.py  AccountInfo.py  AccountModule.py  ExportJson.py  LevelInfo.py  LevelModule.py
src/gdinfo/: gdinfo.py  levelInfo.py  main.py
