[metadata]
name = GDInfo
version = 2.0
author = KelpTaken
author_email = kelptaken@gmail.com
description = Geometry Dash swiss knife
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kelptaken/GDInfo
project_urls =
    Bug Tracker = https://github.com/kelptaken/GDInfo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
